--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ azure-storage-blob = "12.24.1"
 matplotlib = "3.10.0"
 openai = "1.59.9"
 pandas = "2.2.3"
+neo4j = "^5.28.1"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.6.10"
